[package]
name = "async_rocket_playground"
version = "0.1.0"
authors = ["Jose Alvarez <jp.alvarezl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"

rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "4f3511786cb8b6540124b867591c7c5a6933409e" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", rev = "4f3511786cb8b6540124b867591c7c5a6933409e" }

reqwest = { version = "0.11.3", features = ["json"] }

r2d2 = "0.8.9"
redis = { version = "0.20", features = ["r2d2"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

thiserror = "1.0.20"

# Logging
log = "0.4"
env_logger = "0.7.1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "4f3511786cb8b6540124b867591c7c5a6933409e"
default-features = false
features = ["json"]
